Add meta titile + description for web

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="ClujWHO" />
+  <meta name="description"
+    content="Cluj World Health Organization is the first student-led organisation in Eastern Europe whose mission is to educate students and professionals on health issues." />
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
