--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="google-site-verification" content="79cXqfnHwQNmbh_rsrixFkX5fIgPbfFbhjsqvQ16VxM" />
 
   <title>ClujWHO</title>
 </head>
